--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "googleapis": "^170.1.0",
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
